k8s/apps/portfolio-nginx/10-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-nginx
  namespace: portfolio
  labels:
    app.kubernetes.io/name: portfolio-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: portfolio-nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: portfolio-nginx
    spec:
      volumes:
        - name: site
          configMap:
            name: portfolio-site
      containers:
        - name: nginx
          image: nginx:stable
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: site
              mountPath: /usr/share/nginx/html
              readOnly: true
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
