k8s/apps/portfolio-nginx/30-ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-nginx
  namespace: portfolio
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:575530852213:certificate/66c26371-4863-4b7d-b29d-ed16ea02a28d
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  ingressClassName: alb
  rules:
    - host: www.truecloud.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-nginx
                port:
                  number: 80
